--- a/src/webui/_locales/haw-Cyrl/messages.json
+++ b/src/webui/_locales/haw-Cyrl/messages.json
@@ -223,6 +223,18 @@
     "message": "[Ŭŭƥɠřȧȧḓḗḗ ẏǿǿŭŭř Ƥşīīƥħǿǿƞ ƈǿǿƞƞḗḗƈŧīīǿǿƞ]",
     "description": "Title of modal error message shown to user when Psiphon disallows some non-web internet traffic. The user will be told to 'upgrade' their connection with Speed Boost (giving more speed and app compatibility). The word 'Psiphon' must not be translated or transliterated."
   },
+  "notice#psiphonui-fileerror-detail-preamble": {
+    "message": "[Ƒīīŀḗḗƞȧȧḿḗḗ ȧȧƞḓ ḗḗřřǿǿř ḿḗḗşşȧȧɠḗḗ:]",
+    "description": "Preamble text before technical details displayed in a modal error message shown to user when Psiphon cannot read/write/delete a file that it needs to access in order to function properly."
+  },
+  "notice#psiphonui-fileerror-error-body": {
+    "message": "[<p>Ƥşīīƥħǿǿƞ ƈȧȧƞƞǿǿŧ ȧȧƈƈḗḗşş ȧȧ ƒīīŀḗḗ īīŧ ƞḗḗḗḗḓş īīƞ ǿǿřḓḗḗř ŧǿǿ ẇǿǿřķ ƥřǿǿƥḗḗřŀẏ.</p>\n<p>Ƈŀǿǿşḗḗ ŧħḗḗ Ƥşīīƥħǿǿƞ ȧȧƥƥŀīīƈȧȧŧīīǿǿƞ, ḓḗḗŀḗḗŧḗḗ ŧħḗḗ ƒīīŀḗḗ ŀīīşŧḗḗḓ ƀḗḗŀǿǿẇ, ȧȧƞḓ ŧřẏ řŭŭƞƞīīƞɠ Ƥşīīƥħǿǿƞ ȧȧɠȧȧīīƞ.</p>]",
+    "description": "Body text of modal error message shown to user when Psiphon cannot read/write/delete a file that it needs to access in order to function properly. If this occurs, the user cannot connect and must take manual action to fix it. The word 'Psiphon' must not be translated or transliterated."
+  },
+  "notice#psiphonui-fileerror-error-title": {
+    "message": "[Ƒīīŀḗḗ Ȧȧƈƈḗḗşş Ḗḗřřǿǿř]",
+    "description": "Title of modal error message shown to user when Psiphon cannot read/write/delete a file that it needs to access in order to function properly."
+  },
   "notice#systemproxysettings-setproxy-error-body": {
     "message": "[<p>Ƥşīīƥħǿǿƞ ƒȧȧīīŀḗḗḓ ŧǿǿ şḗḗŧ ŧħḗḗ şẏşŧḗḗḿ’ş ƥřǿǿẋẏ şḗḗŧŧīīƞɠş.</p>\n<p>Ŧħīīş ḿīīɠħŧ ƀḗḗ ḓŭŭḗḗ ŧǿǿ ȧȧ ƈǿǿƞƒŀīīƈŧ ẇīīŧħ ẏǿǿŭŭř ȧȧƞŧīīṽīīřŭŭş şǿǿƒŧẇȧȧřḗḗ. Ẏǿǿŭŭ ḿīīɠħŧ ƞḗḗḗḗḓ ŧǿǿ ḿȧȧƞŭŭȧȧŀŀẏ ƈǿǿƞƒīīɠŭŭřḗḗ ẏǿǿŭŭř ȧȧƥƥŀīīƈȧȧŧīīǿǿƞ ǿǿř şẏşŧḗḗḿ ƥřǿǿẋẏ şḗḗŧŧīīƞɠş ŧǿǿ ŭŭşḗḗ ŧħḗḗ ŀǿǿƈȧȧŀ Ƥşīīƥħǿǿƞ ƥřǿǿẋīīḗḗş.</p>]",
     "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon. The word 'Psiphon' must not be translated or transliterated."
