--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -663,6 +663,14 @@
     "message": "‮Ｍǝqsıʇǝs‬ ‮ʍıʇɥıu‬ ‮ʎonɹ‬ ‮ɥoɯǝ‬ ‮ɔonuʇɹʎ‬ ‮ɐɹǝ‬ ‮ƃǝuǝɹɐʅʅʎ‬ ‮uoʇ‬ ‮qʅoɔʞǝp‬, ‮so‬ ‮ǝuɐqʅıuƃ‬ ‮ʇɥıs‬ ‮odʇıou‬ ‮ʍıʅʅ‬ ‮ƃıʌǝ‬ ‮ʎon‬ ‮ɟɐsʇǝɹ‬ ‮ɐɔɔǝss‬ ‮ʇo‬ ‮ʇɥosǝ‬ ‮sıʇǝs‬ ‮ɐup‬ ‮ɔɐu‬ ‮soɯǝʇıɯǝs‬ ‮ɹǝpnɔǝ‬ ‮ISԀ‬ ‮pɐʇɐ‬ ‮nsɐƃǝ‬ ‮ɔosʇs‬.",
     "description": "Help text in the 'Split Tunnel' settings section explaining to the user why they might want to modify (enable) the setting."
   },
+  "settings#split-tunnel-chinese-sites#enable-label": {
+    "message": "‮pou‬'‮ʇ‬ ‮dɹoxʎ‬ ‮Ↄɥıuǝsǝ‬ ‮ʍǝqsıʇǝs‬",
+    "description": "The label on the checkbox that enables 'Split Tunnel' for Chinese websites, regardless of what region the user is in."
+  },
+  "settings#split-tunnel-chinese-sites#note": {
+    "message": "<strong>‮Ｍ∀ᴚNINפ‬:</strong> ‮⊥ɥıs‬ ‮ɟǝɐʇnɹǝ‬ ‮nsǝs‬ ‮pɐʇɐ‬ ‮ʍɥıɔɥ‬ ‮ɯɐʎ‬ ‮uoʇ‬ ‮ɐʅʍɐʎs‬ ‮qǝ‬ ‮ɹǝʅıɐqʅǝ‬. ‮∩sǝ‬ ‮ɔɐnʇıou‬ ‮ʍɥǝu‬ ‮ǝuɐqʅıuƃ‬ ‮ʇɥıs‬ ‮ɟǝɐʇnɹǝ‬ ‮ɐs‬ ‮soɯǝ‬ ‮ɔǝusoɹǝp‬ ‮ʍǝqsıʇǝs‬ ‮ɯɐʎ‬ ‮qǝ‬ ‮nuıuʇǝuʇıouɐʅʅʎ‬ ‮ǝxɔʅnpǝp‬ ‮ɟɹoɯ‬ ‮ʇɥǝ‬ ‮dɹoxʎ‬.",
+    "description": "A note cautioning the user that this feature may result in some sites being unproxied unintentionally."
+  },
   "settings#systray-minimize#enable-label": {
     "message": "‮Wıuıɯızǝ‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬ (‮sʎsʇǝɯ‬ ‮ʇɹɐʎ‬)",
     "description": "The label on the checkbox that enables 'Minimize to Notification Area (System Tray)'."
