In login form, change "Username" label to "PsiCash username"
This is to help mitigate the high rate of incorrect usernames being entered.

Partial implementation of Psiphon-Inc/psiphon-issues#811.

--- a/src/webui/_locales/haw-Cyrl/messages.json
+++ b/src/webui/_locales/haw-Cyrl/messages.json
@@ -368,7 +368,7 @@
     "description": "Text on the submit button in the PsiCash account login modal dialog."
   },
   "psicash#modal-login-username-field": {
-    "message": "[Ŭŭşḗḗřƞȧȧḿḗḗ]",
+    "message": "[ƤşīīƇȧȧşħ ŭŭşḗḗřƞȧȧḿḗḗ]",
     "description": "Label for a username field in the PsiCash account login modal dialog."
   },
   "psicash#modal-logout-error-body": {
