--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -860,7 +860,7 @@
     "description": "Body of modal dialog in which the user can log in to an existing account or click a link to create a new one."
   },
   "psicash#modal-login-username-field": {
-    "message": "Username",
+    "message": "PsiCash username",
     "description": "Label for a username field in the PsiCash account login modal dialog."
   },
   "psicash#modal-login-password-field": {
