--- a/src/webui/_locales/haw-Arab/messages.json
+++ b/src/webui/_locales/haw-Arab/messages.json
@@ -368,7 +368,7 @@
     "description": "Text on the submit button in the PsiCash account login modal dialog."
   },
   "psicash#modal-login-username-field": {
-    "message": "‮∩sǝɹuɐɯǝ‬",
+    "message": "‮ԀsıↃɐsɥ‬ ‮nsǝɹuɐɯǝ‬",
     "description": "Label for a username field in the PsiCash account login modal dialog."
   },
   "psicash#modal-logout-error-body": {
