--- a/src/webui/_locales/fr/messages.json
+++ b/src/webui/_locales/fr/messages.json
@@ -124,11 +124,11 @@
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
     "settings#split-tunnel-chinese-sites#enable-label": {
-        "message": "Don't proxy Chinese websites",
+        "message": "Ne pas relayer les sites chinois",
         "description": "The label on the checkbox that enables 'Split Tunnel' for Chinese websites, regardless of what region the user is in."
     },
     "settings#split-tunnel-chinese-sites#note": {
-        "message": "<strong>WARNING:</strong> This feature uses data which may not always be reliable. Use caution when enabling this feature as some censored websites may be unintentionally excluded from the proxy.",
+        "message": "<strong>AVERTISSEMENT :</strong> Cette fonction utilise des données qui pourraient ne pas toujours être fiables. Faites preuve de prudence en activant cette fonction, car certains sites Web censurés pourrait être exclu involontairement du mandataire.",
         "description": "A note cautioning the user that this feature may result in some sites being unproxied unintentionally."
     },
     "settings#disable-timeouts#heading": {
