--- a/src/webui/_locales/tr/messages.json
+++ b/src/webui/_locales/tr/messages.json
@@ -575,6 +575,10 @@
         "message": "Kapat",
         "description": "Text in the button that dismisses a modal dialog. It is often the only button (no 'OK' or 'Cancel', etc.)."
     },
+    "general#modal-feedback-button": {
+        "message": "Geri bildirim gönderin",
+        "description": "Text in a button that switches to the feedback tab and dismisses a modal dialog."
+    },
     "general#notice-modal-tech-preamble": {
         "message": "Teknik hata bilgisi şu şekilde:",
         "description": "Preamble before the technical message relating to the error being shown. This is generated within the code and may not be very user-friendly (but it may be necessary for the user to figure out what's wrong)."
@@ -852,7 +856,7 @@
         "description": "Body of modal dialog in which the user can log in to an existing account or click a link to create a new one."
     },
     "psicash#modal-login-username-field": {
-        "message": "Kullanıcı adı",
+        "message": "PsiCash username",
         "description": "Label for a username field in the PsiCash account login modal dialog."
     },
     "psicash#modal-login-password-field": {
@@ -860,7 +864,7 @@
         "description": "Label for a password field in the PsiCash account login modal dialog."
     },
     "psicash#modal-login-forgot-password-link": {
-        "message": "Parolamı unuttum",
+        "message": "Parolamı ya da kullanıcı adımı unuttum",
         "description": "Link for text in the PsiCash account login modal dialog. Clicking it will bring the user to a page where they can recover their account."
     },
     "psicash#modal-login-submit-button": {
@@ -935,6 +939,10 @@
         "message": "Yazdığınız kullanıcı adı ya da parola hatalı.",
         "description": "Body text of a modal dialog shown when a PsiCash login fails due to bad username or password."
     },
+    "psicash#login#invalid-credentials-body-multiple-attempts": {
+        "message": "Would you instead like to <a class=\"js-psicash-account-signup\" href=\"#\">create an account</a> or <a class=\"js-psicash-forgot-account\" href=\"#\">recover your account</a>?",
+        "description": "Body text of a modal dialog shown when a PsiCash login fails due to bad username or password."
+    },
     "psicash#login#server-error-body": {
         "message": "Oturum açılmaya çalışılırken PsiCash sunucusundan bir hata yanıtı alındı. Lütfen bir süre sonra yeniden deneyin.",
         "description": "Body text of a modal dialog shown when a PsiCash account login fails due to a server error. The word 'PsiCash' must not be translated or transliterated."
@@ -990,6 +998,18 @@
     "ui#alert#url-copied-to-clipboard": {
         "message": "Adres panoya kopyalandı.<br>Tarayıcı açılmazsa, adresi kopyalayıp tarayıcının adres çubuğuna yapıştırın.",
         "description": "Sometimes when the Psiphon UI tries to open an external URL in the browser, it fails to open. This message indicates to the user that URL has been copied to the Windows system clipboard and is available for pasting into a browser. `<br>` may be used to split the message over two lines to ensure the alert doesn't take too much horizontal space."
+    },
+    "notice#psiphonui-fileerror-error-title": {
+        "message": "File Access Error",
+        "description": "Title of modal error message shown to user when Psiphon cannot read/write/delete a file that it needs to access in order to function properly."
+    },
+    "notice#psiphonui-fileerror-error-body": {
+        "message": "<p>Psiphon cannot access a file it needs in order to work properly.</p>\n<p>Close the Psiphon application, delete the file listed below, and try running Psiphon again.</p>",
+        "description": "Body text of modal error message shown to user when Psiphon cannot read/write/delete a file that it needs to access in order to function properly. If this occurs, the user cannot connect and must take manual action to fix it. The word 'Psiphon' must not be translated or transliterated."
+    },
+    "notice#psiphonui-fileerror-detail-preamble": {
+        "message": "Filename and error message:",
+        "description": "Preamble text before technical details displayed in a modal error message shown to user when Psiphon cannot read/write/delete a file that it needs to access in order to function properly."
     },
     "banner#sponsored-by": {
         "message": "Destekleyen",
