--- a/src/webui/_locales/tr/messages.json
+++ b/src/webui/_locales/tr/messages.json
@@ -400,7 +400,7 @@
         "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
     },
     "settings#upstream-proxy#proxy-reqs": {
-        "message": "Yalnız HTTPS destekleyen HTTP vekil sunucularına izin verilir.",
+        "message": "Yalnızca HTTPS destekleyen HTTP vekil sunucularına izin verilir.",
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
     "settings#upstream-proxy#hostname-label": {
@@ -656,11 +656,11 @@
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-InsufficientBalance-title": {
-        "message": "PsiCash bakiyesi yetersiz",
+        "message": "PsiCash birikiminiz yetersiz",
         "description": "Title of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The user doesn't have enough PsiCash to make the attempted purchase. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-InsufficientBalance-body": {
-        "message": "Bu satın alma için yeterli PsiCash bakiyeniz yok.",
+        "message": "Bu satın alma için yeterli PsiCash birikiminiz yok.",
         "description": "Body text of a modal dialog shown when a PsiCash transaction (like Speed Boost purchase) fails. The user doesn't have enough PsiCash to make the attempted purchase. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#transaction-TransactionAmountMismatch-title": {
@@ -748,7 +748,7 @@
         "description": "Text for a link displayed when the user does not have a PsiCash account. This is an strong suggestion, hence the exclamation point -- use whatever makes sense in your language. It encourages them to make one. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#pane-balance-header": {
-        "message": "Bakiye:",
+        "message": "Birikiminiz:",
         "description": "Text before showing the user's PsiCash balance. So it will appear like: 'Balance: Ⓟ100'."
     },
     "psicash#pane-log-in": {
@@ -764,7 +764,7 @@
         "description": "Text for a link to a web site where users can manage their PsiCash account."
     },
     "psicash#pane-create-account-plea": {
-        "message": "Bir PsiCash hesabı açarak PsiCash bakiyenizi koruyabilirsiniz. Uygulama deposunu temizlerseniz ya da Psiphon uygulamasını başka bir aygıtta kullanırsanız bakiyenizi görebilirsiniz. <a href=\"https://psiphon.ca/faq.html#psicash-account\">Ayrıntılı bilgi alın.</a>",
+        "message": "Bir PsiCash hesabı açarak PsiCash birikiminizi koruyabilirsiniz. Uygulama deposunu temizlerseniz ya da Psiphon uygulamasını başka bir aygıtta kullanırsanız birikiminizi görebilirsiniz. <a href=\"https://psiphon.ca/faq.html#psicash-account\">Ayrıntılı bilgi alın.</a>",
         "description": "Text shown below the PsiCash balance when the user does not have a PsiCash account. 'Learn more' is a link to an FAQ entry explaining the benefits of creating an account. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#pane-l2tp-incompatible": {
@@ -816,7 +816,7 @@
         "description": "Header of a modal dialog that appears when the user tries to buy PsiCash with real money but doens't have an account. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#modal-create-psicash-account-body": {
-        "message": "PsiCash satın almadan önce bir PsiCash hesabı oluşturmanızı önemle öneririz. Bir hesap açarak, bakiyenizi aygıtlarınız arasında paylalabilir ve satın aldığınız PsiCash bakiyenizi koruyabilirsiniz.",
+        "message": "PsiCash satın almadan önce bir PsiCash hesabı oluşturmanızı önemle öneririz. Bir hesap açarak, birikiminizi aygıtlarınız arasında paylalabilir ve satın aldığınız PsiCash birikiminizi koruyabilirsiniz.",
         "description": "Body of a modal dialog that appears when the user tries to buy PsiCash with real money but doens't have an account. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#modal-create-psicash-account-create-button": {
@@ -904,11 +904,11 @@
         "description": "Title of a modal dialog shown when the PsiCash library fails to initialize. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#init-error-body-unrecovered": {
-        "message": "PsiCash hazırlanamadı. Bu durum büyük olasılıkla disk alanının yetersiz olması gibi bir dosya sistemi sorunundan kaynaklanıyor. Bakiyeniz ve diğer durum bilgileriniz kayboldu. PsiCash kullanılamayacak. Sorunu çözmek için uygulamayı yeniden başlatmayı deneyebilirsiniz.",
+        "message": "PsiCash hazırlanamadı. Bu durum büyük olasılıkla disk alanının yetersiz olması gibi bir dosya sistemi sorunundan kaynaklanıyor. Birikiminiz ve diğer durum bilgileriniz kayboldu. PsiCash kullanılamayacak. Sorunu çözmek için uygulamayı yeniden başlatmayı deneyebilirsiniz.",
         "description": "Body text of a modal dialog shown when the PsiCash library fails to initialize. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#init-error-body-recovered": {
-        "message": "PsiCash hazırlanamadı. Bu durum büyük olasılıkla disk alanının yetersiz olması gibi bir dosya sistemi sorunundan kaynaklanıyor. Bakiyeniz ve diğer durum bilgileriniz sıfırlandı.",
+        "message": "PsiCash hazırlanamadı. Bu durum büyük olasılıkla disk alanının yetersiz olması gibi bir dosya sistemi sorunundan kaynaklanıyor. Birikiminiz ve diğer durum bilgileriniz sıfırlandı.",
         "description": "Body text of a modal dialog shown when the PsiCash library fails to initialize. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#psiphon-speed": {
@@ -956,7 +956,7 @@
         "description": "Title of modal dialog shown when the PsiCash account login attempt succeeds, if additional information needs to be conveyed. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#login#last-tracker-merge-body": {
-        "message": "PsiCash hesabınıza oturum açtınız. Bu aygıttaki bakiyeniz hesabınıza aktarıldı. Ancak bu bakiye aktarımı işlemi son kez yapıldı.",
+        "message": "PsiCash hesabınıza oturum açtınız. Bu aygıttaki birikiminiz hesabınıza aktarıldı. Ancak bu birikim aktarım işlemi son kez yapıldı.",
         "description": "Body text of a modal dialog shown when a PsiCash login succeeds. There is a fixed number of times that a user can merge a pre-account balance into a PsiCash account. This message indicates that the user has hit that limit and the merge that occurred is the last one allowed. The word 'PsiCash' must not be translated or transliterated."
     },
     "psicash#alert#tokens-expired": {
